Grammar/tests/unity/success/struct-typedef-extends.top
start(){

    struct Student {
        float math, physics, mean;
    };
    
    typedef Student EngStudent;

}
