Grammar/tests/unity/error/struct-with-var.top
start () {

    struct Students {
        var {
            string nome;
            float math, physics, mean;
        }
    };

}